# calcul-indemnite

./: .env.example  .gitignore  CONTENT-QUEUE.md  WRITING-PLAYBOOK.md  astro.config.mjs  package.json  plan-site-fr-4.md  pnpm-lock.yaml  wrangler.jsonc
data/: bareme-macron-source.txt  verified-citations.txt
pipeline/: README.md  pyproject.toml
pipeline/migrations/: 000_framework.sql  001_conventions.sql  002_conventions_factors.sql  003_conventions_meta.sql  004_source_hashes.sql  005_social_parameters.sql
pipeline/pipeline/: cli.py  db.py  export.py  health.py  migrate.py  settings.py
pipeline/pipeline/scrapers/: __init__.py  base.py  cdtn_conventions.py  cdtn_watch.py  social_params.py
public/: _headers  robots.txt
scripts/: audit-content.mjs  audit-urls.mjs  content-queue.mjs  gen-brand-assets.mjs
scripts/vps/: 00-postgres-setup.sh  01-postgres-backup-cron.sh  02-install-systemd-cron.sh  README.md  daily-rebuild.sh  indexnow-ping.sh  publish.sh
src/components/: AffiliateDisclosure.astro  Breadcrumbs.astro  Container.astro  Cta.astro  Faq.astro  Footer.astro  GuideCard.astro  Header.astro  Hero.astro  LastUpdate.astro  Methodology.astro  Newsletter.astro  RelatedGuides.astro  ShareButton.astro  TableOfContents.astro
src/content/: config.ts
src/data/: authors.ts  bareme-macron.json  chomage.json  conventions.json  hubs.ts  indemnite-licenciement.json  parametres-sociaux.json  site.ts
src/layouts/: Base.astro
src/lib/: locale.ts  schema.ts  seo.ts
src/pages/: 404.astro  a-propos.astro  bareme-macron.astro  calcul-bareme-macron.astro  calcul-indemnite-licenciement.astro  calcul-rupture-conventionnelle.astro  cgu.astro  (+5 more)
(+49 files in other folders)
