[project]
name = "renov-pipeline"
version = "0.1.0"
description = "Ingestion + export pipeline for ma-renov-aide.fr data sources (ADEME DPE, France Rénov, ANAH, CEE)"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
renov = "pipeline.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
