[project]
name = "indemnite-pipeline"
version = "0.1.0"
description = "Ingestion + export pipeline for calcul-indemnite.fr data (SocialGouv code-du-travail conventions, Légifrance, SMIC/PMSS)"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
indemnite = "pipeline.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
